--- a/config/vc.cfg
+++ b/config/vc.cfg
@@ -1,5 +1,5 @@
--cc=vbccm68k -quiet %s -o= %s %s -O=%ld -Iinclude
--ccv=vbccm68k %s -o= %s %s -O=%ld -Iinclude
+-cc=vbccm68k -quiet %s -o= %s %s -O=%ld -Iinclude/posix -Iinclude
+-ccv=vbccm68k %s -o= %s %s -O=%ld -Iinclude/posix -Iinclude
 -as=vasmm68k_mot -quiet -Fhunk -phxass %s -o %s
 -asv=vasmm68k_mot -Fhunk -phxass %s -o %s
 -rm=del %s
