use absolute paths

--- a/config/vc.cfg
+++ b/config/vc.cfg
@@ -1,13 +1,13 @@
--cc=vbccm68k -quiet %s -o= %s %s -O=%ld -Iinclude/posix -Iinclude
--ccv=vbccm68k %s -o= %s %s -O=%ld -Iinclude/posix -Iinclude
+-cc=vbccm68k -quiet %s -o= %s %s -O=%ld -IC:/amiga-dev/include/posix -IC:/amiga-dev/include
+-ccv=vbccm68k %s -o= %s %s -O=%ld -IC:/amiga-dev/include/posix -IC:/amiga-dev/include
 -as=vasmm68k_mot -quiet -Fhunk -phxass %s -o %s
 -asv=vasmm68k_mot -Fhunk -phxass %s -o %s
 -rm=del %s
 -rmv=del %s
--ld=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -Llib lib/startup.o %s %s -lvc -o %s
--l2=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -Llib %s %s -o %s
--ldv=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -Llib lib/startup.o %s %s -lvc -o %s
--l2v=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -Llib %s %s -o %s
+-ld=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -LC:/amiga-dev/lib C:/amiga-dev/lib/startup.o %s %s -lvc -o %s
+-l2=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -LC:/amiga-dev/lib %s %s -o %s
+-ldv=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -LC:/amiga-dev/lib C:/amiga-dev/lib/startup.o %s %s -lvc -o %s
+-l2v=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -LC:/amiga-dev/lib %s %s -o %s
 -ldnodb=-s -Rshort
 -ul=-l%s
 -cf=-F%s
