--- a/config/vc.cfg
+++ b/config/vc.cfg
@@ -1,13 +1,13 @@
--cc=vbccm68k -quiet %s -o= %s %s -O=%ld -I%%VBCC%%/include/include_h -I%%VBCC%%/include/posix -I%%VBCC%%/include
--ccv=vbccm68k %s -o= %s %s -O=%ld -I%%VBCC%%/include/include_h -I%%VBCC%%/include/posix -I%%VBCC%%/include
--as=vasmm68k_mot -quiet -Fhunk -phxass %s -o %s -I%%VBCC%%/include/include_i
--asv=vasmm68k_mot -Fhunk -phxass %s -o %s -I%%VBCC%%/include/include_i
+-cc=vbccm68k -quiet %s -o= %s %s -O=%ld -I"%%VBCC%%/include/include_h" -I"%%VBCC%%/include/posix" -I"%%VBCC%%/include"
+-ccv=vbccm68k %s -o= %s %s -O=%ld -I"%%VBCC%%/include/include_h" -I"%%VBCC%%/include/posix" -I"%%VBCC%%/include"
+-as=vasmm68k_mot -quiet -Fhunk -phxass %s -o %s -I"%%VBCC%%/include/include_i"
+-asv=vasmm68k_mot -Fhunk -phxass %s -o %s -I"%%VBCC%%/include/include_i"
 -rm=del %s
 -rmv=del %s
--ld=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -L%%VBCC%%/lib %%VBCC%%/lib/startup.o %s %s -lvc -o %s
--l2=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -L%%VBCC%%/lib %s %s -o %s
--ldv=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -L%%VBCC%%/lib %%VBCC%%/lib/startup.o %s %s -lvc -o %s
--l2v=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -L%%VBCC%%/lib %s %s -o %s
+-ld=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/lib" "%%VBCC%%/lib/startup.o" %s %s -lvc -o %s
+-l2=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/lib" %s %s -o %s
+-ldv=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/lib" "%%VBCC%%/lib/startup.o" %s %s -lvc -o %s
+-l2v=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/lib" %s %s -o %s
 -ldnodb=-s -Rshort
 -ul=-l%s
 -cf=-F%s
