build and install vlink

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/vasm"]
 	path = src/vasm
 	url = git://github.com/kusma/vasm.git
+[submodule "src/vlink"]
+	path = src/vlink
+	url = git://github.com/kusma/vlink.git
