--- a/config/vc.cfg
+++ b/config/vc.cfg
@@ -1,9 +1,7 @@
--cc=vbccm68k -quiet %s -o= %s %s -O=%ld -I"%%VBCC%%/targets/m68k-amigaos/include/include_h" -I"%%VBCC%%/targets/m68k-amigaos/posix/include" -I"%%VBCC%%/targets/m68k-amigaos/include"
--ccv=vbccm68k %s -o= %s %s -O=%ld -I"%%VBCC%%/targets/m68k-amigaos/include/include_h" -I"%%VBCC%%/targets/m68k-amigaos/posix/include" -I"%%VBCC%%/targets/m68k-amigaos/include"
--as=vasmm68k_mot -quiet -Fhunk -phxass %s -o %s -I"%%VBCC%%/targets/m68k-amigaos/include/include_i"
--asv=vasmm68k_mot -Fhunk -phxass %s -o %s -I"%%VBCC%%/targets/m68k-amigaos/include/include_i"
--rm=del %s
--rmv=del %s
+-cc=vbccm68k -quiet %s -o= %s %s -O=%ld -I"%%VBCC%%/targets/m68k-amigaos/ndk/include_h" -I"%%VBCC%%/targets/m68k-amigaos/include"
+-ccv=vbccm68k %s -o= %s %s -O=%ld -I"%%VBCC%%/targets/m68k-amigaos/ndk/include_h" -I"%%VBCC%%/targets/m68k-amigaos/include"
+-as=vasmm68k_mot -quiet -Fhunk -phxass %s -o %s -I"%%VBCC%%/targets/m68k-amigaos/ndk/include_i"
+-asv=vasmm68k_mot -Fhunk -phxass %s -o %s -I"%%VBCC%%/targets/m68k-amigaos/ndk/include_i"
 -ld=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/targets/m68k-amigaos/lib" "%%VBCC%%/targets/m68k-amigaos/lib/startup.o" %s %s -lvc -o %s
 -l2=vlink -bamigahunk -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/targets/m68k-amigaos/lib" %s %s -o %s
 -ldv=vlink -bamigahunk -t -x -Bstatic -Cvbcc -nostdlib -L"%%VBCC%%/targets/m68k-amigaos/lib" "%%VBCC%%/targets/m68k-amigaos/lib/startup.o" %s %s -lvc -o %s
